# BrowseAI-Dev

./: .env.example  .gitignore  CLAUDE.md  LICENSE  NOTICE  README.md  glama.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  vercel.json
.claude/: settings.local.json
.github/workflows/: ci.yml  code-review.yml  hol-skill-validate.yml  publish-integrations.yml  publish-mcp.yml
.vercel/output/: config.json
api/: index.ts
apps/api/: package.json
apps/mcp/: Dockerfile  README.md  package.json  server.json
benchmarks/: run_averitec.py  run_climate_fever.py
docs/: launch-video-script.md
examples/: README.md  contradiction-detector.py  deep-research-agent.py  enterprise-search.py  streaming-agent.py
examples/coding-agent/: README.md  agent.py
examples/content-agent/: README.md  agent.py
examples/debate-settler/: README.md
examples/docs-verifier/: README.md  verify_docs.py
examples/education-agent/: README.md  agent.py
examples/fact-checker-bot/: README.md
examples/financial-agent/: README.md  agent.py
examples/healthcare-agent/: README.md  agent.py
examples/is-this-true/: README.md
examples/legal-agent/: README.md  agent.py
examples/scientific-agent/: README.md  agent.py
examples/support-agent/: README.md  agent.py  requirements.txt
public/: llms-full.txt  llms.txt  robots.txt  sitemap.xml
public/.well-known/: ai-plugin.json
scripts/: build-vercel.sh
shims/npm/: README.md  package.json
shims/pypi/: README.md  pyproject.toml
shims/pypi/browseai/: __init__.py
src/: App.tsx  index.css
src/pages/: Admin.tsx  (+15 more)
(+54 files in other folders)
